--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
 </head>
 
 <body>
-    <h1>Jose's Landscaping</h1>
+    <div class="section" </div>
+        <h2 id="name">
+            <Jose 's Landscaping</h2>
+                <img class="Avatar" src="images/grass.jpeg" alt="grass picture"/>
+            </div>
+
+
+
+
+<section>
+    <div class="test" </div>
+        <div class="test" </div>
+            <div class="test" </div>
+</section>
+
+<footer>
+    <ul>
+        <li>About Us</li>
+        <li>Contact Us</li>
+        <li>FAQ</li>
+    </ul>
+</footer>
 
 </body>
 
