--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 </head>
 
 <body>
-    <div class="section" </div>
-        <h2 id="name">
-            <Jose 's Landscaping</h2>
-                <img class="Avatar" src="images/grass.jpeg" alt="grass picture"/>
-            </div>
+    <header></header>
+    <div class="about-me">
+        <h2 id="name">Jose 's Landscaping</h2>
+        <img class="avatar" src="images/grass.jpeg" alt="grass picture" />
+    </div>
 
 
 
 
-<section>
-    <div class="test" </div>
+    <section>
         <div class="test" </div>
             <div class="test" </div>
-</section>
+                <div class="test" </div>
+    </section>
 
-<footer>
-    <ul>
-        <li>About Us</li>
-        <li>Contact Us</li>
-        <li>FAQ</li>
-    </ul>
-</footer>
+    <footer>
+        <ul>
+            <li>About Us</li>
+            <li>Contact Us</li>
+            <li>FAQ</li>
+        </ul>
+    </footer>
 
 </body>
 
